# FixFirst_AI

./: .dockerignore  .env.example  .gitignore  FixFirst_Sample_Reviews.csv  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-training.txt  requirements.txt  template.py
data/extracted_labels/: extracted_labeling_progress.parquet  extracted_labels.parquet
data/gold_eval/: eval_report.json
data/processed/: test.parquet  train.parquet  val.parquet
data/silver_labels/: labeling_failures.parquet  silver_labeling_progress.parquet  silver_labels.parquet
data/training_format/: label_vocab.json
data/training_format/test/: aspect_category.jsonl  aspect_sentiment.jsonl  master.jsonl
data/training_format/train/: aspect_category.jsonl  aspect_sentiment.jsonl  master.jsonl
data/training_format/val/: aspect_category.jsonl  aspect_sentiment.jsonl  master.jsonl
docker/: dockerfile.api  dockerfile.dashboard  dockerfile.mlflow
mlruns/0/: meta.yaml
mlruns/692492423909061481/: meta.yaml
mlruns/692492423909061481/b48b36722bd842799b3e03a882829952/: meta.yaml
notebooks/: 03_silver_label_qa.ipynb  colab_free_gpu_training.ipynb  colab_training.ipynb
research/: 01_eda.ipynb
scripts/: build_training_format.py  extract_gold_labels.py  ingest_aware.py  init_db.py  run_gold_eval.py  run_hybrid_inference.py  run_pipeline_flow.py  run_preprocessing.py  run_scoring.py  run_silver_labeling.py  seed_features.py  train_aspect_category.py  train_aspect_sentiment.py
src/fixfirst/: __init__.py
src/fixfirst/api/: deps.py  main.py  queries.py  routes.py  schemas.py
src/fixfirst/business/: __init__.py  scoring.py
src/fixfirst/config/: __init__.py  configuration.py  settings.py
src/fixfirst/constants/: __init__.py
src/fixfirst/core/: __init__.py  db.py
src/fixfirst/dashboard/: api_client.py  app.py
src/fixfirst/data_pipeline/: __init__.py  ingestion.py  preprocessing.py
src/fixfirst/db/: base.py  models.py
src/fixfirst/evaluation/: category_mapping.py  gold_eval.py
src/fixfirst/exceptions/: exception.py
src/fixfirst/inference/: confidence.py  model_inference.py  pipeline.py  router.py
src/fixfirst/ingestion/: aware_loader.py
src/fixfirst/labeling/: llm_client.py  parser.py  prompt.py  silver_labeler.py  taxonomy.py  zero_shot.py
(+56 files in other folders)
